manifest/war-staging/namespaces/core-apps/nodejs-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-web-app
spec:
  selector:
    matchLabels:
      app: nodejs-web-app
  template:
    metadata:
      labels:
        app: nodejs-web-app
    spec:
      containers:
      - name: nodejs-web-app
        image: gcr.io/studi-devops-370205/nodejs-app:Beta
        resources:
          limits:
            memory: "50Mi"
            cpu: "50m"
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name:  gcr-credentials
