manifest/war-staging/namespaces/core-apps/nodejs-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-web-app-service
spec:
  selector:
    app: nodejs-web-app
  ports:
  - name: http
    port: 3000
    targetPort: 3000
